Add a subheader and modify font styling

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/scripts.js"></script>
     <title>Celebrity Dating</title>
@@ -11,6 +12,15 @@
     <div class="container">
 
       <h1 id="title">What programming language should I choose?</h1>
+      <sub>by Maxwell Dubin, 10/19/2018</sub>
+      <br>
+      <sub><a href="https://github.com/maxdhs">Github.com/maxdhs</a></sub>
+      <br><br><br>
+      <p>It can feel overwhelming sometimes considering all the programming languages to choose from when deciding to learn how to program. The good news is; it's less important than you believe. Learning any language well will give you the fundamental skills you need and you will be able to apply these skills to another programming language you eventually learn.
+      </p>
+
+      <p>Go ahead and select from the below questions below to find out which programming language would be a great fit for you to start but, at the end of the day, remember that starting anywhere is more than likely great.
+      </p>
 
       <h3>How much do you enjoy math?</h3>
       <select class="form-control" id="math">
@@ -37,12 +47,18 @@
         <option>Apps</option>
       </select>
 
+      <h3>Do you prefer the direct route or the scenic route?</h3>
+      <select class="form-control" id="directOrScenic">
+        <option>Direct</option>
+        <option>Scenic</option>
+      </select>
+
       <button type="submit" id="inputButton" class="btn btn-primary" value="Submit">Submit</button>
 
       <h4 id="output1">C# would be a great choice for you!</h4>
       <h4 id="output2">CSS would be a great choice for you!</h4>
       <h4 id="output3">Ruby would be a great choice for you!</h4>
-      
+
     </div>
   </body>
 </html>
