Add styling to the header element and font awesome icons link in the head

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/scripts.js"></script>
     <title>Celebrity Dating</title>
@@ -11,10 +11,25 @@
   <body>
     <div class="container">
 
-      <h1 id="title">What programming language should I choose?</h1>
-      <sub>by Maxwell Dubin, 10/19/2018</sub>
-      <br>
-      <sub><a href="https://github.com/maxdhs">Github.com/maxdhs</a></sub>
+      <h1>What programming language should I choose?</h1>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-1">
+            <i class="fas fa-3x fa-user-ninja"></i>
+          </div>
+          <div class="col-sm-4">
+            <sub>by Maxwell Dubin, 10/19/2018</sub>
+            <br>
+            <sub><a href="https://github.com/maxdhs">Github.com/maxdhs</a></sub>
+          </div>
+        </div>
+      </div>
+
+
+
+
+
       <br><br><br>
       <p>It can feel overwhelming sometimes considering all the programming languages to choose from when deciding to learn how to program. The good news is; it's less important than you believe. Learning any language well will give you the fundamental skills you need and you will be able to apply these skills to another programming language you eventually learn.
       </p>
