Add title element and further CSS styling

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/scripts.js"></script>
-    <title>Celebrity Dating</title>
+    <title>Track Suggester</title>
   </head>
   <body>
     <div class="container">
@@ -26,11 +26,8 @@
         </div>
       </div>
 
+      <br><br>
 
-
-
-
-      <br><br><br>
       <p>It can feel overwhelming sometimes considering all the programming languages to choose from when deciding to learn how to program. The good news is; it's less important than you believe. Learning any language well will give you the fundamental skills you need and you will be able to apply these skills to another programming language you eventually learn.
       </p>
 
@@ -67,6 +64,8 @@
         <option>Direct</option>
         <option>Scenic</option>
       </select>
+
+      <br>
 
       <button type="submit" id="inputButton" class="btn btn-primary" value="Submit">Submit</button>
 
