Add text descriptions of each programming language and bootstrap styling of select boxes

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
       <p>Go ahead and select from the below questions below to find out which programming language would be a great fit for you to start but, at the end of the day, remember that starting anywhere is more than likely great.
       </p>
 
+    <div class="well text-primary">
+
+      <h3 class="bg-primary text-white">These 5 simple questions will point you in the right direction
+      </h3>
+
       <h3>How much do you enjoy math?</h3>
       <select class="form-control" id="math">
         <option>I love math</option>
@@ -68,10 +73,30 @@
       <br>
 
       <button type="submit" id="inputButton" class="btn btn-primary" value="Submit">Submit</button>
+    </div>
 
-      <h4 id="output1">C# would be a great choice for you!</h4>
-      <h4 id="output2">CSS would be a great choice for you!</h4>
-      <h4 id="output3">Ruby would be a great choice for you!</h4>
+
+
+      <h4 id="output1"><u>C#</u> would be a great choice for you!
+        <br><br>
+        C#[b] (pronounced C sharp) is a general-purpose, multi-paradigm programming language encompassing strong typing, imperative, declarative, functional, generic, object-oriented (class-based), and component-oriented programming disciplines.[15] It was developed around 2000 by Microsoft within its .NET initiative and later approved as a standard by Ecma (ECMA-334) and ISO (ISO/IEC 23270:2006). C# is one of the programming languages designed for the Common Language Infrastructure.
+        <br><br>
+        C#'s development team is led by Anders Hejlsberg. The most recent version is C# 7.3, which was released in 2018 alongside Visual Studio 2017 version 15.7.2.[16]
+      </h4>
+
+      <h4 id="output2"><u>CSS</u> would be a great choice for you!
+        <br><br>
+        Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language like HTML.[1] CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.[2]
+        <br><br>
+        CSS is designed to enable the separation of presentation and content, including layout, colors, and fonts.[3] This separation can improve content accessibility, provide more flexibility and control in the specification of presentation characteristics, enable multiple web pages to share formatting by specifying the relevant CSS in a separate .css file, and reduce complexity and repetition in the structural content.
+      </h4>
+
+      <h4 id="output3"><u>Ruby</u> would be a great choice for you!
+        <br><br>
+        Ruby is a dynamic, interpreted, reflective, object-oriented, general-purpose programming language. It was designed and developed in the mid-1990s by Yukihiro "Matz" Matsumoto in Japan.
+        <br><br>
+        According to the creator, Ruby was influenced by Perl, Smalltalk, Eiffel, Ada, and Lisp.[12] It supports multiple programming paradigms, including functional, object-oriented, and imperative. It also has a dynamic type system and automatic memory management.
+      </h4>
 
     </div>
   </body>
